--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -15,6 +15,19 @@
 	</properties>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-packaging-plugin</artifactId>
+					<version>${tychoVersion}</version>
+					<configuration>
+						<strictBinIncludes>false</strictBinIncludes>
+						<strictVersions>false</strictVersions>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.tycho.extras</groupId>
