--- a/releng/studio-repository/pom.xml
+++ b/releng/studio-repository/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>org.bonitasoft.studio.releng</groupId>
 	<artifactId>studio-repository</artifactId>
-	<version>6.0.0-Beta-SNAPSHOT</version>
+	<version>6.0.0.Beta-SNAPSHOT</version>
 	<packaging>eclipse-repository</packaging>
 
 	<build>
