--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
 	</properties>
 
 	<modules>
-<!-- 		<module>platform</module>
+		<module>platform</module>
 		<module>patched-plugins</module>
 		<module>bundles</module>
 		<module>tests</module>
-		<module>all-in-one</module> -->
+		<module>all-in-one</module>
 	</modules>
 
 
