--- a/bundles/plugins/org.bonitasoft.studio-models/pom.xml
+++ b/bundles/plugins/org.bonitasoft.studio-models/pom.xml
@@ -74,6 +74,7 @@
 						</executions>
 					</plugin>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-clean-plugin</artifactId>
 						<configuration>
 							<filesets>
