--- a/tests/org.bonitasoft.studio.test.swtbot.suite/pom.xml
+++ b/tests/org.bonitasoft.studio.test.swtbot.suite/pom.xml
@@ -51,6 +51,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
     			<artifactId>maven-clean-plugin</artifactId>
     			<version>2.4.1</version>
     			<configuration>
