--- a/all-in-one/pom.xml
+++ b/all-in-one/pom.xml
@@ -214,6 +214,7 @@
 				</configuration>
 			</plugin>
 			<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<executions>
 					<execution>
