--- a/all-in-one/pom.xml
+++ b/all-in-one/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.bonitasoft.studio</groupId>
 		<artifactId>studio</artifactId>
-		<version>6.1.0-rc-01</version>
+		<version>6.1.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.bonitasoft.studio</groupId>
