--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 		<bundle.version>6.0.5-SNAPSHOT</bundle.version>
 		<engine.version>6.0.5-SNAPSHOT</engine.version>
-		<connector.version>6.0.5-SNAPSHOT</connector.version>
+		<connector.version>6.0.4</connector.version>
 
 		<simulation.version>6.0.0</simulation.version>
 		<filters.version>6.0.5-SNAPSHOT</filters.version>
