BS-210 Correct LookNFeeFilter after correction in PoolFilter, moved Instance Section from SP to Community

--- a/bundles/plugins/org.bonitasoft.studio.properties/plugin.xml
+++ b/bundles/plugins/org.bonitasoft.studio.properties/plugin.xml
@@ -152,6 +152,11 @@
                id="tab.index"
                label="%tab.index.label">
          </propertyTab>
+         <propertyTab
+               category="domain"
+               id="tab.instances"
+               label="%tab.instances.label">
+         </propertyTab>
       </propertyTabs>
    </extension>
    
