--- a/bundles/plugins/org.bonitasoft.studio.properties/plugin.properties
+++ b/bundles/plugins/org.bonitasoft.studio.properties/plugin.properties
@@ -21,4 +21,5 @@ tab.loop.label=Iteration
 tab.transitionordering.label=Transition ordering
 tab.document.label=Documents
 tab.index.label=Search
+tab.instances.label=Instances
 
