--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 		<tychoExtrasVersion>0.18.0</tychoExtrasVersion>
 		<os-jvm-flags></os-jvm-flags>
 		<bundle.version>6.1.2-rc-01</bundle.version>
-		<engine.version>6.1.2-rc-01</engine.version>
+		<engine.version>6.1.3-SNASHOT</engine.version>
 		<connector.version>6.1.0</connector.version>
 		<simulation.version>6.1.0</simulation.version>
-		<filters.version>6.1.1</filters.version>
+		<filters.version>6.1.3-SNAPSHOT</filters.version>
 		<theme.builder.version>6.1.0</theme.builder.version>
 		<watchdog.version>6.0.1</watchdog.version>
 		<p2MirrorUrl>http://192.168.4.5/6.1/repository/</p2MirrorUrl>
