--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<tychoVersion>0.18.0</tychoVersion>
 		<tychoExtrasVersion>0.18.0</tychoExtrasVersion>
 		<os-jvm-flags></os-jvm-flags>
-		<bundle.version>6.1.2-rc-01</bundle.version>
+		<bundle.version>6.1.3-SNAPSHOT</bundle.version>
 		<engine.version>6.1.3-SNASHOT</engine.version>
 		<connector.version>6.1.0</connector.version>
 		<simulation.version>6.1.0</simulation.version>
