--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<tychoExtrasVersion>0.18.0</tychoExtrasVersion>
 		<os-jvm-flags></os-jvm-flags>
 		<bundle.version>6.1.3-SNAPSHOT</bundle.version>
-		<engine.version>6.1.3-SNASHOT</engine.version>
+		<engine.version>6.1.3-SNAPSHOT</engine.version>
 		<connector.version>6.1.0</connector.version>
 		<simulation.version>6.1.0</simulation.version>
 		<filters.version>6.1.3-SNAPSHOT</filters.version>
