--- a/bundles/plugins/org.bonitasoft.studio.validation/plugin.xml
+++ b/bundles/plugins/org.bonitasoft.studio.validation/plugin.xml
@@ -896,7 +896,7 @@
                   {0}
                </message>
                <target
-                     class="AndGateway">
+                     class="ANDGateway">
                </target>
             </constraint>
          </constraints>
